simplify stream collection code